--- a/src/gui.html
+++ b/src/gui.html
@@ -44,12 +44,12 @@
     title="2. Preview bucket and select items"
     subtitle="All selected image/directories will be imported"
   >
-    <pre>{{state.viewerPath}}</pre>
     <sly-file-viewer
+      v-loading="state.viewerLoading"
       :list="data.tree"
       v-model="state.selected"
       :options="{flatMode: true}"
-      @change="state.viewerPath = $event.path"
+      @change="(evt) => { if (evt.type !== 'folder') return; state.viewerPath = evt.path; state.viewerLoading = true; command('refresh_tree_viewer') }"
     />
   </sly-card>
 
