add batch size for link upload

--- a/src/gui.html
+++ b/src/gui.html
@@ -46,7 +46,7 @@
         <el-checkbox v-model="state.forceMetadata" style="margin: 5px 10px 0 0">
         </el-checkbox>
         <sly-field class="mt20" title="Upload Metadata"
-          description="If disabled - images will be added without metadata, ">
+          description="If disabled - images will be added without metadata">
         </sly-field>
       </div>
     </sly-field>
