fix typo in gui

--- a/src/gui.html
+++ b/src/gui.html
@@ -29,7 +29,7 @@
 			>
 				<el-select
 					v-model="state.bucketName"
-					placeholder="Select cloud provider"
+					placeholder="Select bucket/storage"
 					filterable
 					clearable
 					no-data-text="Custom bucket"
