--- a/src/gui.html
+++ b/src/gui.html
@@ -53,7 +53,7 @@
 			>
 				<el-select
 					v-model="state.bucketName"
-					placeholder="Select bucket/storage"
+					placeholder="Select bucket/storage or enter manually"
 					filterable
 					clearable
 					no-data-text="Custom bucket"
